--- a/Ewan/Model3InputChannels.ipynb
+++ b/Ewan/Model3InputChannels.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {
     "id": "q-j3b_Sx4Tb9"
    },
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {
     "id": "9QtjhkqE4ar5"
    },
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {
     "id": "zuLLmf1t4b82"
    },
@@ -94,7 +94,7 @@
     "        self.max_pool3 = nn.MaxPool2d(kernel_size = 2, stride = 2)\n",
     "\n",
     "        \n",
-    "        self.fc1 = nn.Linear(8192 , 128)\n",
+    "        self.fc1 = nn.Linear(16448 , 128)\n",
     "        self.relu1 = nn.ReLU()\n",
     "        self.fc2 = nn.Linear(128, num_classes)\n",
     "    \n",
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {
     "id": "j1nVfQzO4zNS"
    },
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -156,109 +156,16 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [1/100], Loss: 4.6337\n",
-      "Epoch [2/100], Loss: 4.6120\n",
-      "Epoch [3/100], Loss: 4.6177\n",
-      "Epoch [4/100], Loss: 4.6169\n",
-      "Epoch [5/100], Loss: 4.6088\n",
-      "Epoch [6/100], Loss: 4.5540\n",
-      "Epoch [7/100], Loss: 4.5172\n",
-      "Epoch [8/100], Loss: 4.4917\n",
-      "Epoch [9/100], Loss: 4.0360\n",
-      "Epoch [10/100], Loss: 4.0263\n",
-      "Epoch [11/100], Loss: 3.7704\n",
-      "Epoch [12/100], Loss: 3.8019\n",
-      "Epoch [13/100], Loss: 3.3657\n",
-      "Epoch [14/100], Loss: 3.7112\n",
-      "Epoch [15/100], Loss: 3.4376\n",
-      "Epoch [16/100], Loss: 3.3121\n",
-      "Epoch [17/100], Loss: 2.8977\n",
-      "Epoch [18/100], Loss: 3.0493\n",
-      "Epoch [19/100], Loss: 3.1532\n",
-      "Epoch [20/100], Loss: 3.3739\n",
-      "Epoch [21/100], Loss: 3.3655\n",
-      "Epoch [22/100], Loss: 3.0554\n",
-      "Epoch [23/100], Loss: 2.6967\n",
-      "Epoch [24/100], Loss: 3.0739\n",
-      "Epoch [25/100], Loss: 3.1830\n",
-      "Epoch [26/100], Loss: 2.7506\n",
-      "Epoch [27/100], Loss: 2.4925\n",
-      "Epoch [28/100], Loss: 2.1974\n",
-      "Epoch [29/100], Loss: 2.5740\n",
-      "Epoch [30/100], Loss: 2.5761\n",
-      "Epoch [31/100], Loss: 2.2314\n",
-      "Epoch [32/100], Loss: 2.6624\n",
-      "Epoch [33/100], Loss: 2.6674\n",
-      "Epoch [34/100], Loss: 2.9692\n",
-      "Epoch [35/100], Loss: 2.0108\n",
-      "Epoch [36/100], Loss: 2.2276\n",
-      "Epoch [37/100], Loss: 2.7401\n",
-      "Epoch [38/100], Loss: 2.4995\n",
-      "Epoch [39/100], Loss: 1.9076\n",
-      "Epoch [40/100], Loss: 1.9378\n",
-      "Epoch [41/100], Loss: 2.0542\n",
-      "Epoch [42/100], Loss: 1.8996\n",
-      "Epoch [43/100], Loss: 2.1310\n",
-      "Epoch [44/100], Loss: 1.8280\n",
-      "Epoch [45/100], Loss: 2.3672\n",
-      "Epoch [46/100], Loss: 1.9359\n",
-      "Epoch [47/100], Loss: 1.3768\n",
-      "Epoch [48/100], Loss: 1.4342\n",
-      "Epoch [49/100], Loss: 1.6089\n",
-      "Epoch [50/100], Loss: 1.3153\n",
-      "Epoch [51/100], Loss: 1.2458\n",
-      "Epoch [52/100], Loss: 1.0406\n",
-      "Epoch [53/100], Loss: 1.7911\n",
-      "Epoch [54/100], Loss: 1.3594\n",
-      "Epoch [55/100], Loss: 1.3174\n",
-      "Epoch [56/100], Loss: 1.8965\n",
-      "Epoch [57/100], Loss: 1.2820\n",
-      "Epoch [58/100], Loss: 1.1682\n",
-      "Epoch [59/100], Loss: 1.1805\n",
-      "Epoch [60/100], Loss: 1.4550\n",
-      "Epoch [61/100], Loss: 0.8506\n",
-      "Epoch [62/100], Loss: 1.7070\n",
-      "Epoch [63/100], Loss: 1.1017\n",
-      "Epoch [64/100], Loss: 1.3114\n",
-      "Epoch [65/100], Loss: 1.6971\n",
-      "Epoch [66/100], Loss: 0.7709\n",
-      "Epoch [67/100], Loss: 1.2436\n",
-      "Epoch [68/100], Loss: 0.8694\n",
-      "Epoch [69/100], Loss: 0.8022\n",
-      "Epoch [70/100], Loss: 1.3759\n",
-      "Epoch [71/100], Loss: 0.6676\n",
-      "Epoch [72/100], Loss: 1.0073\n",
-      "Epoch [73/100], Loss: 1.1335\n",
-      "Epoch [74/100], Loss: 0.6997\n",
-      "Epoch [75/100], Loss: 1.1001\n",
-      "Epoch [76/100], Loss: 0.4711\n",
-      "Epoch [77/100], Loss: 0.9505\n",
-      "Epoch [78/100], Loss: 0.8857\n",
-      "Epoch [79/100], Loss: 0.5922\n",
-      "Epoch [80/100], Loss: 0.7153\n",
-      "Epoch [81/100], Loss: 1.0355\n",
-      "Epoch [82/100], Loss: 0.6239\n",
-      "Epoch [83/100], Loss: 0.6020\n",
-      "Epoch [84/100], Loss: 0.5150\n",
-      "Epoch [85/100], Loss: 0.2580\n",
-      "Epoch [86/100], Loss: 1.1456\n",
-      "Epoch [87/100], Loss: 0.3031\n",
-      "Epoch [88/100], Loss: 0.6410\n",
-      "Epoch [89/100], Loss: 0.5305\n",
-      "Epoch [90/100], Loss: 0.1670\n",
-      "Epoch [91/100], Loss: 0.6916\n",
-      "Epoch [92/100], Loss: 0.2502\n",
-      "Epoch [93/100], Loss: 0.3797\n",
-      "Epoch [94/100], Loss: 0.5033\n",
-      "Epoch [95/100], Loss: 0.3913\n",
-      "Epoch [96/100], Loss: 0.1886\n",
-      "Epoch [97/100], Loss: 0.5672\n",
-      "Epoch [98/100], Loss: 0.3480\n",
-      "Epoch [99/100], Loss: 0.6161\n",
-      "Epoch [100/100], Loss: 0.7670\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_17712\\1374577957.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     21\u001b[0m         \u001b[1;31m# Backward and optimize\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m         \u001b[0moptimizer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mzero_grad\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 23\u001b[1;33m         \u001b[0mloss\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     24\u001b[0m         \u001b[0moptimizer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\torch\\_tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[1;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[0;32m    485\u001b[0m                 \u001b[0minputs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0minputs\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    486\u001b[0m             )\n\u001b[1;32m--> 487\u001b[1;33m         torch.autograd.backward(\n\u001b[0m\u001b[0;32m    488\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0minputs\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    489\u001b[0m         )\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\torch\\autograd\\__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[1;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[0;32m    198\u001b[0m     \u001b[1;31m# some Python versions print out the first line of a multi-line function\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    199\u001b[0m     \u001b[1;31m# calls in the traceback and some print out the last line\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 200\u001b[1;33m     Variable._execution_engine.run_backward(  # Calls into the C++ engine to run the backward pass\n\u001b[0m\u001b[0;32m    201\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgrad_tensors_\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    202\u001b[0m         allow_unreachable=True, accumulate_grad=True)  # Calls into the C++ engine to run the backward pass\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -296,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -305,15 +212,7 @@
     "id": "BsUH3Yfv47K6",
     "outputId": "6a312104-6d3a-42d4-9153-34e7c8fbbce3"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy of the network on the 6149 train images: 26.605952187347537 %\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with torch.no_grad():\n",
     "    correct = 0\n",
@@ -356,7 +255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
