--- a/Ewan/Model3InputChannels.ipynb
+++ b/Ewan/Model3InputChannels.ipynb
@@ -43,7 +43,7 @@
     "    root=\"data\",\n",
     "    split=\"test\",\n",
     "    download=True,\n",
-    "    transform = transforms.Compose([transforms.Resize((64, 64)), transforms.ToTensor(), transforms.RandomHorizontalFlip(),\n",
+    "    transform = transforms.Compose([transforms.Resize((64, 64)), transforms.ToTensor(), \n",
     "                                    transforms.Normalize((0.4914, 0.4822, 0.4465), (0.2023, 0.1994, 0.2010))]),\n",
     ")"
    ]
