--- a/Model4Modded.ipynb
+++ b/Model4Modded.ipynb
@@ -182,7 +182,16 @@
     "outputId": "528f1e72-014b-457e-83d4-19cf48ae2a52",
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SAVE COMPLETE NEW ACC: 0\n",
+      "Epoch [1/100], Loss: 4.3915\n"
+     ]
+    }
+   ],
    "source": [
     "saveCounter = 0\n",
     "minLoss = 10000\n",
@@ -209,7 +218,7 @@
     "    if minLoss > loss:\n",
     "        tempAcc = testValidationData(net)\n",
     "        if tempAcc > valAccurary:\n",
-    "            valAccurary = tempAccurary\n",
+    "            valAccurary = tempAcc\n",
     "            saveCounter += 1\n",
     "            save_network(net, saveCounter)\n",
     "            print(\"SAVE COMPLETE NEW ACC:\", valAccurary)\n",
